# python-copilot-training

./: LICENSE  README.md  TODO.md  config.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py
app/main/: routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: about.html  base.html  index.html
app/templates/errors/: 404.html  500.html
app/templates/upload/: upload.html
app/templates/visualize/: chart.html  stats.html  table.html
app/upload/: routes.py
app/uploads/: dnd_characters.csv
app/utils/: parser.py  storage.py
app/visualize/: __init__.py  routes.py
data/: video_game_sales.csv
